# ifgame-autoconf

./: Makefile.am  README  configure.in  ifgame_autoconf.README
docs/: Makefile.am  README  intro.txt  npc.txt  puzzles.txt  story.txt
hints/: Makefile.am  README  shell_hints.slg  slag
lib/: COPYING.h  COPYING_tx.h
src/: Makefile.am  shell.inf
